[gd_scene load_steps=15 format=3 uid="uid://c0d3wyqm3sjw3"]

[ext_resource type="Texture2D" uid="uid://y1ju5fkgl25x" path="res://assets/sprites/player/spr_player.png" id="1_eqqp1"]
[ext_resource type="Script" uid="uid://fuhwjbwxgafl" path="res://scripts/player/Player.gd" id="1_uxov2"]
[ext_resource type="Script" uid="uid://6llfvsp5lajq" path="res://scripts/components/MovementComponent.gd" id="2_ykyjo"]
[ext_resource type="Script" uid="uid://pqof0afeal2r" path="res://scripts/player/states/PlayerStateMachine.gd" id="3_nmc1l"]
[ext_resource type="Script" uid="uid://doy7mbk4eho6k" path="res://scripts/components/InputComponent.gd" id="5_f46kd"]
[ext_resource type="Script" uid="uid://bwkajbpfqye4r" path="res://scripts/components/GravityComponent.gd" id="6_3rerk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykyjo"]
size = Vector2(26, 8)

[sub_resource type="Animation" id="Animation_ykyjo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_f46kd"]
resource_name = "fall"
length = 0.1667
step = 0.085
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 11]
}

[sub_resource type="Animation" id="Animation_3rerk"]
resource_name = "glide"
length = 0.1667
loop_mode = 1
step = 0.085
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_eqqp1"]
resource_name = "idle"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_nmc1l"]
resource_name = "jump"
length = 0.25
step = 0.085
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 10]
}

[sub_resource type="Animation" id="Animation_uxov2"]
resource_name = "walk"
length = 0.6667
loop_mode = 1
step = 0.085
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uxov2"]
_data = {
&"RESET": SubResource("Animation_ykyjo"),
&"fall": SubResource("Animation_f46kd"),
&"glide": SubResource("Animation_3rerk"),
&"idle": SubResource("Animation_eqqp1"),
&"jump": SubResource("Animation_nmc1l"),
&"walk": SubResource("Animation_uxov2")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_uxov2")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_ykyjo")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_eqqp1")
hframes = 8
vframes = 2
frame = 4

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uxov2")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_nmc1l")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2_ykyjo")

[node name="InputComponent" type="Node" parent="."]
script = ExtResource("5_f46kd")

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("6_3rerk")
